--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/cutn"
         android:layout_width="wrap_content"
         android:src="@drawable/logo"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginStart="3dp"
         android:layout_marginLeft="3dp"
         android:layout_marginTop="4dp"
@@ -53,15 +53,15 @@
     <com.eldersoss.elderssearchview.EldersSearchView
         android:id="@+id/searchForProduct"
         android:layout_width="match_parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         android:layout_height="wrap_content"
-        app:esvSuggestionsEnabled="true"
-        app:esvAlwaysFilter="true"
+        app:esvSuggestionsEnabled="false"
         app:esvHintText="Search For Product"
         app:esvElevation="@dimen/cardview_compat_inset_shadow"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.194"
-        tools:layout_editor_absoluteX="0dp" />
+
+        />
 
     <ImageButton
         android:id="@+id/photo"
