Integrated all products, made products one liner for consistency

--- a/app/src/main/res/layout/product_row_item.xml
+++ b/app/src/main/res/layout/product_row_item.xml
@@ -36,8 +36,13 @@
                 android:textSize="14sp"
                 android:layout_marginBottom="12dp"
                 android:id="@+id/product_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autoSizeTextType="uniform"
+                android:lines="1"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeMaxTextSize="16sp"
+                android:autoSizeStepGranularity="2sp"/>
 
 
             <TextView
