--- a/app/src/main/res/layout/popular_items_layout.xml
+++ b/app/src/main/res/layout/popular_items_layout.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="170dp"
     android:layout_height="250dp"
-    android:layout_marginRight="14dp">
+    android:layout_marginRight="14dp"
+    android:id="@+id/cardView">
 
     <RelativeLayout
         android:layout_width="match_parent"
