--- a/app/src/main/res/layout/activity_individual_product.xml
+++ b/app/src/main/res/layout/activity_individual_product.xml
@@ -27,7 +27,7 @@
 
 
     <TextView
-        android:id="@+id/classifierLabel"
+        android:id="@+id/productNameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -44,7 +44,7 @@
         android:id="@+id/locationLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/classifierLabel"
+        android:layout_below="@+id/productNameLabel"
         android:layout_centerInParent="true"
         android:layout_marginTop="-8dp"
         android:fontFamily="@font/baloo"
@@ -61,7 +61,6 @@
         android:layout_marginTop="25dp"
         android:layout_below="@+id/productNameLabel"
         android:layout_centerInParent="true"
-        android:layout_marginTop="25dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:flexibility="7">
