--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:onClick="goToShoppingCart"
         android:src="@drawable/cart"
         app:layout_constraintBottom_toBottomOf="@+id/rewards"
         app:layout_constraintEnd_toStartOf="@+id/rewards"
         app:layout_constraintTop_toTopOf="@+id/rewards" />
-        android:onClick="goToShoppingCart"/>
 
     <ImageButton
         android:id="@+id/rewards"
