--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -1,95 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#fffffdff"
     android:layout_height="match_parent"
+    android:background="#fffffdff"
     tools:context=".ShoppingCartActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:background="@android:color/transparent"
-        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/transparent"
+        android:fitsSystemWindows="true">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
-            app:titleTextColor="@color/colorAccent"
-            app:title="Shopping Cart"
-            android:background="@android:color/white"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"/>
+            android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/white"
+            app:title="Shopping Cart"
+            app:titleTextColor="@color/colorAccent" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:id="@+id/shopping_cart_recyclerView"
-        android:layout_margin="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="2dp"
         android:paddingBottom="66dp"
-        />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
     <RelativeLayout
-        android:padding="8dp"
-        app:elevation="4dp"
-        android:layout_gravity="bottom"
-        android:elevation="15dp"
-        android:background="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="66dp"
+        android:layout_gravity="bottom"
+        android:background="@color/colorAccent"
+        android:elevation="15dp"
+        android:padding="8dp"
+        app:elevation="4dp"
         tools:targetApi="lollipop">
 
 
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_height="wrap_content"
+            android:weightSum="1"
             tools:ignore="RtlCompat">
 
             <TextView
                 android:id="@+id/totalLabel"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="Total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:layout_weight="1"
+                android:text="Total"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
-                android:layout_marginStart="18dp"
                 android:id="@+id/total_price"
-                android:textSize="24sp"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:ignore="RtlCompat"/>
+                android:layout_marginStart="18dp"
+                android:layout_weight="1"
+                android:textColor="@android:color/white"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                tools:ignore="RtlCompat" />
+
+            <EditText
+                android:id="@+id/voucherCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
+                android:hint="Voucher Code"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:ignore="RtlCompat" />
 
         </LinearLayout>
 
 
         <Button
-            android:textSize="15sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="15dp"
             android:layout_marginRight="15dp"
+            android:background="@drawable/round_background"
+            android:onClick="checkout"
             android:padding="10dp"
-            android:layout_alignParentEnd="true"
             android:text="Checkout"
             android:textAllCaps="false"
-            android:background="@drawable/round_background"
             android:textColor="@android:color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:onClick="checkout"/>
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
