--- a/app/src/main/res/layout/activity_individual_product.xml
+++ b/app/src/main/res/layout/activity_individual_product.xml
@@ -312,6 +312,7 @@
     </LinearLayout>
 
     <com.skydoves.elasticviews.ElasticButton
+        android:id="@+id/submitBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
