--- a/app/src/main/res/layout/activity_individual_product.xml
+++ b/app/src/main/res/layout/activity_individual_product.xml
@@ -23,7 +23,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_margin="10dp"
-        android:background="@drawable/cart" />
+        android:background="@drawable/cart"
+        android:onClick="goToShoppingCart"/>
 
 
     <TextView
