Added back button to all products page

--- a/app/src/main/res/layout/activity_all_products.xml
+++ b/app/src/main/res/layout/activity_all_products.xml
@@ -5,7 +5,8 @@
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fffffa">
+    android:background="#fffffa"
+    tools:context=".ShoppingCartActivity">
 
 
     <com.google.android.material.appbar.AppBarLayout
