--- a/app/src/main/res/layout/activity_classifier.xml
+++ b/app/src/main/res/layout/activity_classifier.xml
@@ -25,6 +25,7 @@
         android:layout_margin="10dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:onClick="goToShoppingCart"
         />
 
 
