--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,16 +50,36 @@
     <!--        app:layout_constraintTop_toTopOf="parent"-->
     <!--        tools:layout_editor_absoluteX="4dp" />-->
 
-    <com.eldersoss.elderssearchview.EldersSearchView
+<!--    <com.eldersoss.elderssearchview.EldersSearchView-->
+<!--        android:id="@+id/searchForProduct"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="120dp"-->
+<!--        app:esvElevation="@dimen/cardview_compat_inset_shadow"-->
+<!--        app:esvHintText="Search For Product"-->
+<!--        app:esvSuggestionsEnabled="false"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="0.194" />-->
+    <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
         android:id="@+id/searchForProduct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        app:esvElevation="@dimen/cardview_compat_inset_shadow"
-        app:esvHintText="Search For Product"
-        app:esvSuggestionsEnabled="false"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.194" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:padding="16dp"
+        app:borderColor="#095AEA"
+        app:borderWidth="2dp"
+        app:cornerRadius="12dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/searchForProductET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Search For Product" />
+
+    </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
 
     <ImageButton
         android:id="@+id/photo"
@@ -73,11 +93,21 @@
         app:layout_constraintTop_toTopOf="@+id/cart" />
 
     <ImageButton
+        android:id="@+id/searchBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="0dp"
+        android:src="@drawable/ic_baseline_find_in_page_24"
+        app:layout_constraintBottom_toBottomOf="@+id/searchForProduct"
+        app:layout_constraintEnd_toStartOf="@+id/microphone"
+        app:layout_constraintTop_toTopOf="@+id/searchForProduct" />
+
+    <ImageButton
         android:id="@+id/microphone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
         android:src="@drawable/microphone"
         app:layout_constraintBottom_toBottomOf="@+id/searchForProduct"
         app:layout_constraintEnd_toEndOf="parent"
