--- a/app/src/main/res/layout/activity_classifier.xml
+++ b/app/src/main/res/layout/activity_classifier.xml
@@ -46,7 +46,8 @@
             android:layout_centerInParent="true"
             android:src="@drawable/r4"
             android:gravity="center"
-            android:scaleType="fitCenter"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
